@@ -11,6 +11,7 @@
 * Barclays ePDQ Extra Plus: Use correct PROD url [ntalbott]
 * Hitrust: update test & live urls [melari]
 * NAB Transact: Add auth & capture support [nagash]
+* Mercury: Support card-less capture and refund [ntalbott]
 
 == Version 1.34.1 (June 28, 2013)
 
